SIP-1568|adding CDM validation on outbound connectors & small sonar fix