@@ -8,7 +8,6 @@ import de.ikor.sip.foundation.security.config.SecurityConfigProperties.AuthProvi
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -65,14 +64,14 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
   @Override
   protected void configure(AuthenticationManagerBuilder authManagerBuilder)
       throws IllegalStateException {
-    List<Class<?>> autowiredAuthProviders =
-        authProviders.stream().map(Object::getClass).collect(Collectors.toList());
+    List<? extends Class<?>> autowiredAuthProviders =
+        authProviders.stream().map(Object::getClass).toList();
 
-    List<Class<?>> providersUnavailableAtRuntime =
+    List<? extends Class<?>> providersUnavailableAtRuntime =
         config.getAuthProviders().stream()
             .map(AuthProviderSettings::getClassname)
             .filter(a -> !autowiredAuthProviders.contains(a))
-            .collect(Collectors.toList());
+            .toList();
 
     if (!providersUnavailableAtRuntime.isEmpty()) {
       throw SIPFrameworkException.initException(
